ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wordpress
  namespace: wordpress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS, DELETE, PATCH
    nginx.ingress.kubernetes.io/cors-allow-credentials: 'true'
    nginx.ingress.kubernetes.io/cors-allow-headers: 'Authentication,Keep-Alive,User-Agent,X-Requested-With,Cache-Control,Content-Type,X-Api-Key,X-Device-Id,Access-Control-Allow-Origin'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    external-dns.alpha.kubernetes.io/hostname: 'wordpress.quangtuan.me'
    external-dns.alpha.kubernetes.io/ttl: '120'
    external-dns.alpha.kubernetes.io/target: quangtuan.me
spec:
  tls:
    - hosts:
        - wordpress.quangtuan.me
      secretName: wordpress-certificate-prod-tls

  rules:
    - host: 'wordpress.quangtuan.me'
      http:
        paths:
          - path: '/'
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
